[package]
name = "soundboard-rs"
version = "0.1.0"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { path = "C:/Users/Axel/projects/web-view", features = ["edge"] }
nfd = { git = "https://github.com/saurvs/nfd-rs" }
#ez-audio = { git = "https://github.com/Kl4rry/ez-audio" }
ez_audio = { path = "C:/Users/Axel/projects/ez-audio" }
tokio = { version = "0.3.2", features = ["full"] }
rdev = "0.1.0"
directories = "3.0.1"
serde = { version = "*", features = ["derive"] }
ron = "*"
single-instance = "0.1.2"
msgbox = "0.6.0"

[build-dependencies]
base64 = "0.13.0"
regex = "1.4.2"
html-minifier = "3.0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
