[package]
name = "harmony"
version = "0.1.0"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view", features = ["edge"] }
#web-view = { path = "C:/Users/Axel/projects/web-view", features = ["edge"] }
ez_audio = { path = "C:/Users/Axel/projects/ez-audio" }
#ez-audio = { git = "https://github.com/Kl4rry/ez-audio" }
tokio = { version = "1.2.0", features = ["full"] }
rdev = "0.4.6"
directories = "3.0.1"
serde = { version = "*", features = ["derive"] }
ron = "*"
single-instance = "0.1.2"
msgbox = "0.6.0"
tinyfiledialogs = "3.3.10"

[build-dependencies]
base64 = "0.13.0"
regex = "1.4.2"
html-minifier = "3.0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"

[package.metadata.winres]
OriginalFilename = "Harmony.exe"
FileDescription = "Harmony"
LegalCopyright = "Copyright © 2021 Axel Kappel"
ProductName = "Harmony"
