[package]
name = "harmony-rs"
version = "0.1.4"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A software soundboard written in rust"
repository = "https://github.com/Kl4rry/Harmony"
homepage = "https://github.com/Kl4rry/Harmony"

[[bin]]
name = "harmony"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web-view = { git = "https://github.com/Boscop/web-view", features = ["edge"] }
web-view = { version = "0.7.3", features = ["edge"] }
ez_audio = "0.1.2"
tokio = { version = "1.2.0", features = ["full"] }
rdev = "0.4.6"
directories = "3.0.1"
serde = { version = "1.0.125", features = ["derive"] }
ron = "0.6.4"
single-instance = "0.1.2"
msgbox = "0.6.0"
tinyfiledialogs = "3.3.10"

[build-dependencies]
base64 = "0.13.0"
regex = "1.4.2"
html-minifier = "3.0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"

[package.metadata.winres]
OriginalFilename = "Harmony.exe"
FileDescription = "Harmony"
LegalCopyright = "Copyright © 2021 Axel Kappel"
ProductName = "Harmony"
